Fix some colors and spacing

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -238,8 +238,8 @@ header.masthead .device-container .screen img {
 }
 
 #research {
-  background-color: #3b5998;
-  min-height: 775px;
+  background-color: #684D79;
+  color: white;
 }
 
 #observation {
@@ -288,7 +288,7 @@ section.download .badges .badge-link img {
 }
 
 section.research .section-heading {
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 section.research .section-heading h2 {
@@ -306,7 +306,7 @@ section.research .feature-item {
 }
 
 section.research .device-container {
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
 }
 
 @media (min-width: 992px) {
@@ -368,7 +368,8 @@ section.cta .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* This thing below does the image fading effect */
+  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 section.contact {
